1998-05-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Remove NextPrev from Index protocol.  Tweak
	comments for the sake of documentation processing.

1998-04-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Set.[hm] ([Set_c -createIndex:fromMember:]): Rename from
	createIndexIn:fromMember:.  Raise a NotImplemented event.

	* ListGen.m: Adjust error message to be createIndex:fromMember
	not createIndexIn:fromMember.

	* collections.h: Augment the Index documentation.  Move the
	existing Index info to the Collections protocol, as it is
	a bit more general.

1998-04-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Add documentation tags.

	* collections.h: New protocols: MemberType, IndexSafety, Offsets, 
	ForEach.  (Collection): Include them.
	New protocols: DefaultMember, MemberBlock.
	(Array): Include them.
	New protocol: EndsOnly.
	(List): Include it.
	New protocols: DupOption, Sorted, CompareFunction, BucketFunction,
	PartiallyOrdered, PartialOrderContext, PartialOrderRelations.
	(KeyedCollection): Include them.

	* String.m: Reformatting throughout.
	
	* String.[hm]: ([String_c -appendC:]): Remove.

	* InputStream.m (readString): Use catC: instead of appendC:.

1998-04-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile: Remove duplicate SWARMHOME assignment.

1998-04-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Make archiver symbols extern, not common.

1997-12-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h (OutputStream, String):  Constify string arguments.

	* OutputStream.[hm]: Constify string arguments.

	* String.[hm]: Constify string arguments.

1997-11-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (OBJECTS): Add InputStream.o and predicates.o.
	(install-headers): Add InputStream.h and predicates.o.
	($(INCLIB)/InputStream.h): Add.
	($(INCLIB)/predicates.h): Add.

	* collections.m (_collections_implement): Add InputStream.