@@ -1,3 +1,10 @@
+1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* Set.m ([Set_c -at:memberSlot:]): Return NO, not nil.
+	
+	* collections.h	(Index, ListIndex, Stack, Queue, PartialOrderRelations,
+	Set, MapIndex): Add phase tags.
+
 1998-05-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* collections.h: Remove NextPrev from Index protocol.  Tweak
